# FGP_ROBOT

./: .gitignore
src/controller/tum_ics_ur_robot/tum_ics_msgs/: .gitignore  CMakeLists.txt  package.xml
src/controller/tum_ics_ur_robot/tum_ics_msgs/action/: Playskill.action
src/controller/tum_ics_ur_robot/tum_ics_msgs/include/tum_ics_msgs/: TumCommon.h
src/controller/tum_ics_ur_robot/tum_ics_msgs/msg/: ActiveSkill.msg  Context.msg  ControlData.msg  ForceQPData.msg  JointPositions.msg  JointTorques.msg
src/controller/tum_ics_ur_robot/tum_ics_msgs/srv/: GetActiveSkill.srv  GetSkillState.srv  PlaySkill.srv  SendNewAction.srv  StopSkill.srv
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/: CMakeLists.txt  package.xml
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/include/tum_ics_ur_robot_controllers/: DirectJointControl.h  JointImpedanceControl.h  PIDControl.h  SOSMControl.h  SOSMOpControl.h  SimpleEffortControl.h  TestEffortControl.h  XImpedanceControl.h
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/launch/: newCommInterfaceTestLeft.launch  newCommInterfaceTestRight.launch  robotStateClientTest.launch  testJointCtrlGazebo.launch  testJointCtrl_Pablo.launch  testJointCtrl_tomarm.launch  testJointCtrl_ur10.launch  testMControlsSkillServer_emulated.launch  testMultipleControllers.launch  testMultipleControllers_left.launch  testRobotTime.launch  testSOSMCtrl.launch  testSOSMCtrl_ur10.launch
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/launch/configs/: config_ur10_Arm_FD_real.ini  config_ur10_Arm_FD_sim.ini  sosmCtrl_right_wolfi.yaml  wb_base_mdl.yaml  wb_skin_ctrl_left.yaml  wb_skin_ctrl_right.yaml
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/src/: DirectJointControl.cpp  JointImpedanceControl.cpp  PIDControl.cpp  SOSMControl.cpp  SOSMOpControl.cpp  SimpleEffortControl.cpp  TestEffortControl.cpp  XImpedanceControl.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/src/Applications/: main_newCommInterfaceTest.cpp  main_robotStateClientTest.cpp  testJointControl.cpp  testJointCtrlPublisher.cpp  testMControlsSkillServer_emulated.cpp  testMultipleControls.cpp  testRobotTime.cpp  testSOSMControl.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/src/SkillControls/: CartesianControl.cpp  DControl.cpp  GControl.cpp  JointControl.cpp  SplineCartesianControl.cpp  SplineCartesianControlSOSM.cpp  SplineJointControl.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_controllers/src/matlab/: PlotCtrlData.m  PlotRobotData.m  robotData.csv  seCtrlData.bag  seCtrlData.csv
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/: CMakeLists.txt  package.xml
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/include/tum_ics_ur_robot_lli/: JointState.h  RobotTime.h  SharedDefs.h
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/launch/: testRobotStateClient-UR3.launch  testSimpleEffortCtrl.launch
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/: JointState.cpp  RobotTime.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/Applications/: main_comm_intf_test.cpp  main_robot_state_client.cpp  testScriptLoader.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/Robot/: DynamicModel.cpp  KinematicModel.cpp  RobotArm.cpp  RobotArmConstrained.cpp  RobotArmExt.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/RobotControllers/: ControlEffort.cpp  ControlPosition.cpp  ControlVelocity.cpp  Controller.cpp  ControllerList.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/RobotInterface/: CommInterface.cpp  CommInterfaceScriptLoader.cpp  DataUnpacker.cpp  RobotStateClient.cpp  RobotStatePub.cpp  ScriptLoader.cpp  TcpSocketTools.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/RobotTools/: ButterFilter2.cpp  MathTools.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_lli/src/matlab/: JointPoseFloat64.csv  JointPoseInt32.csv  MmulVal.m  PlotCtrlData.m  PlotSentData.m  seCtrlData.bag  seCtrlData.csv
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_manager/: CMakeLists.txt  package.xml
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_manager/docs/: Skill-Ctrl-Map.ods
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_manager/launch/: gazebo_script_manager_left.launch  gazebo_script_manager_right.launch  robot_script_manager-UR3.launch  robot_script_manager_left.launch  robot_script_manager_left_old.launch  robot_script_manager_right.launch  robot_script_manager_test_left_old.launch  robot_script_manager_test_right.launch  robot_script_manager_ur10.launch  skill_list_test.launch  skill_manager_test.launch  testScriptLoader.launch
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_manager/src/: RobotArmClosed.cpp  RobotScriptManager.cpp  ScriptLoader.cpp  ScriptManager.cpp  Skill.cpp  SkillList.cpp  SkillManager.cpp  SkillServer.cpp  SkillTransition.cpp  SkillTransitionManager.cpp
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_manager/src/Applications/: CMakeLists.txt  (+6 more)
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_msgs/: CMakeLists.txt
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_msgs/msg/: ControlData.msg  ControlEventEval.msg  ControlSkinDstbTorqueData.msg  FloatValue.msg  JointPoseFloat.msg  JointPoseInt.msg  PlotRobotData.msg  PlotRobotFullData.msg  RobotTF.msg  Special_cmd.msg
src/controller/tum_ics_ur_robot/tum_ics_ur_robot_msgs/srv/: GetAvailableActions.srv  GetContactFlag.srv  GetXefW.srv  Move2Object.srv  PlayArmAction.srv  PlayArmMotion.srv  SetControlState.srv  SetTemperatureClass.srv  StopActiveControl.srv  UpdateKDPsych.srv  get_control_status.srv  reload_ctrl_gains.srv  setControllerCmd.srv  set_operation_mode.srv
src/l515_tools/: CMakeLists.txt  package.xml
src/l515_tools/scripts/: Calibration.csv  Plot_generator_coordinates.m  Plot_generator_depth.m  Plot_generator_lidar.m  Plot_generator_tray.asv  Plot_generator_tray.m  Predictions.csv  aruco_roi_results.csv  ball_predictor.py  ball_tracker.py  hsv_tuner.py  roi_depth_calibration.py  roi_selector.py  roi_to_xyz_calibration.py
(+84 files in other folders)
